# bulk-robust-assignment

./: .gitignore  BendersCut.cpp  BendersCut.h  CMakeLists.txt  FindGUROBI.cmake  Instance.cpp  Instance.h  LICENSE  Problem.cpp  Problem.h  README.md  SubProblem.cpp  assignmentModel.cpp  compactModel.cpp  linearRelaxation.cpp  main.cpp  masterModel.cpp  matchingAlgorithm.cpp
instances/: Match_100_0.txt  Match_100_1.txt  Match_100_2.txt  Match_100_3.txt  Match_100_4.txt  Match_100_5.txt  Match_100_6.txt  Match_100_7.txt  Match_100_8.txt  Match_100_9.txt  Match_120_0.txt  Match_120_1.txt  Match_120_2.txt  Match_120_3.txt  Match_120_4.txt  Match_120_5.txt  Match_120_6.txt  Match_120_7.txt  Match_120_8.txt  Match_120_9.txt  Match_20_0.txt  Match_20_1.txt  Match_20_2.txt  Match_20_3.txt  Match_20_4.txt  Match_20_5.txt  Match_20_6.txt  Match_20_7.txt  Match_20_8.txt  Match_20_9.txt  Match_40_0.txt  Match_40_1.txt  Match_40_2.txt  Match_40_3.txt  Match_40_4.txt  Match_40_5.txt  Match_40_6.txt  Match_40_7.txt  Match_40_8.txt  Match_40_9.txt  (+20 more)
script/: RunExperiments.sh
